<resources>
    <string name="app_name">CoachingApp</string>
    <string name="message">Hello World!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="createGame">Create Game</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonValidateMap">Validate the location</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="goalButton">Goal!</string>
    <string name="shotButton">Shots</string>
    <string name="onTargetButton">on target</string>
    <string name="foulsButton">fouls</string>
    <string name="hjButton">offsides</string>
    <string name="yellowButton">yellow card</string>
    <string name="redButton">red card</string>
    <string name="endButton">End Game</string>
    <string name="timeField">time</string>

</resources>
